sidebar: allow to shrink the sidebar more

so we can give more space to the document view, and
also because sidebar minimum width was too much in
verbose locales (because of bookmark button labels)
which was almost causing it to switch to a two
columns layout.

Fixed by:

 - Switching the bookmarks section button labels
   from "Add" and "Remove" to be "+" and "-" along
   with corresponding tooltip and accesible names.

 - Set the label of the main sidebar toggle button
   to be ellipsizable, so the sidebar can be resized
   to reduce width even more.

https://bugzilla.gnome.org/show_bug.cgi?id=778000